[fix] panel and point was not showing

--- a/src/stylesheets/panel.scss
+++ b/src/stylesheets/panel.scss
@@ -2,6 +2,10 @@
   display: none;
   &.show {
     display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
   }
   img {
     width: 200px;
