--- a/src/stylesheets/point.scss
+++ b/src/stylesheets/point.scss
@@ -1,6 +1,7 @@
 .point {
   display: none;
   &.show {
+    z-index: 1;
     display: flex;
     justify-content: center;
     align-items: center;
